--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -136,13 +136,6 @@ button {
     margin-right: 0;
 }
 
-@keyframes blink {
-    to {
-        background-color: #ffffff;
-        color: #000000;
-    }
-}
-
 label:focus {
     background-color: #000000;
 }
@@ -163,8 +156,16 @@ label:focus {
   color: @yellow;
 }
 
+#pulseaudio.muted {
+  color: @overlay1;
+}
+
 #network {
   color: @green;
+}
+
+#network.disconnected {
+  color: @overlay1;
 }
 
 #battery {
@@ -172,12 +173,8 @@ label:focus {
 }
 
 #battery.critical:not(.charging) {
-    color: @red;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+    background-color: @red;
+    color: @crust;
 }
 
 #custom-power {
