Make waybar colors consistent

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -160,7 +160,7 @@ label:focus {
 }
 
 #pulseaudio.muted {
-  color: @overlay1;
+  color: @surface2;
 }
 
 #network {
@@ -168,7 +168,7 @@ label:focus {
 }
 
 #network.disconnected {
-  color: @overlay1;
+  color: @surface2;
 }
 
 #battery {
